vest-dsl/test/bad/const_byte_array_len_mismatch2.vest
const BAR: [u8; 4] = [1; 5]
